--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "dotenv": "^16.3.1"
   }
 }
